--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "npx patch-package"
   },
   "dependencies": {
+    "@middy/core": "^2.5.1",
+    "api-key-auth": "^0.2.3",
     "core-js": "^3.6.5",
     "faunadb": "^4.4.1",
+    "lambda-rate-limiter": "^3.0.1",
     "node-fetch": "^2.6.2",
     "skyblock-parser": "^0.2.10",
     "vue": "^3.0.0"
